# nsx-usb

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  nsx-module.yaml  release-please-config.json
.github/workflows/: release.yml
includes-api/: ns_usb.h  nsx_usb.h
src/: nsx_usb.c
src/overrides/: nsx_usb_descriptors.c  nsx_usb_overrides.c
